[gd_scene load_steps=6 format=3 uid="uid://5vvlp6um5naw"]

[ext_resource type="Texture2D" uid="uid://dvpbaxv46n2vu" path="res://icon.svg" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://diprv0se7dcmf" path="res://scripts/enemy.gd" id="1_md0e3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sugp2"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jyhfs"]
blend_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_jyhfs"]
radius = 200.16

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 16
script = ExtResource("1_md0e3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sugp2")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_jyhfs")
scale = Vector2(0.125, 0.125)
texture = ExtResource("1_7p1mj")

[node name="AimArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AimArea"]
shape = SubResource("CircleShape2D_jyhfs")

[node name="DirectionTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Rays" type="Node2D" parent="."]

[node name="LeftRay" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
target_position = Vector2(-64, 0)
collision_mask = 16

[node name="RightRay" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
target_position = Vector2(64, 0)
collision_mask = 16

[node name="TopRay" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
target_position = Vector2(0, -64)
collision_mask = 16

[node name="BotRay" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
target_position = Vector2(0, 64)
collision_mask = 16

[node name="Rays2" type="Node2D" parent="."]

[node name="LeftRay" type="RayCast2D" parent="Rays2"]
target_position = Vector2(-24, 0)
collision_mask = 16

[node name="RightRay" type="RayCast2D" parent="Rays2"]
target_position = Vector2(24, 0)
collision_mask = 16

[node name="TopRay" type="RayCast2D" parent="Rays2"]
target_position = Vector2(0, -24)
collision_mask = 16

[node name="BotRay" type="RayCast2D" parent="Rays2"]
target_position = Vector2(0, 24)
collision_mask = 16

[connection signal="timeout" from="DirectionTimer" to="." method="change_direction"]
